Move updating card state code to game class

--- a/MatchingGame/Pages/Index.razor
+++ b/MatchingGame/Pages/Index.razor
@@ -13,8 +13,8 @@
 
     <div class="d-flex justify-content-center">
         <button class="btn-lg mx-6" @onclick="() => SelectGame(GameDifficulty.Easy)">Easy</button>
-        <button class="btn-lg mx-6" @onclick="() => SelectGame(GameDifficulty.Medium)">Medium</button>
-        <button class="btn-lg mx-6" @onclick="() => SelectGame(GameDifficulty.Hard)">Hard</button>
+        <button class="btn-lg mx-6 btn-primary" @onclick="() => SelectGame(GameDifficulty.Medium)">Medium</button>
+        <button class="btn-lg mx-6 btn-danger" @onclick="() => SelectGame(GameDifficulty.Hard)">Hard</button>
     </div>
 </div>
 
