Fixed bug in routing

--- a/MatchingGame/Pages/Index.razor
+++ b/MatchingGame/Pages/Index.razor
@@ -25,6 +25,6 @@
         int difficulty = (int)setting;
         service.CreateNewGame(difficulty);
 
-        NavigationManager.NavigateTo($"/playgame/{difficulty}");
+        NavigationManager.NavigateTo($"playgame/{difficulty}");
     }
 }
