--- a/MatchingGame/Pages/PlayGame.razor
+++ b/MatchingGame/Pages/PlayGame.razor
@@ -132,7 +132,7 @@
             {
                 stopWatch.Stop();
                 game.TimeUsed = stopWatch.TimeElapsed;
-                NavigationManager.NavigateTo($"/gameover");
+                NavigationManager.NavigateTo($"gameover");
             }
         };
         t.AutoReset = false;
