Fixed bug in routing

--- a/MatchingGame/Pages/GameOver.razor
+++ b/MatchingGame/Pages/GameOver.razor
@@ -25,6 +25,6 @@
 
     private void PlayAgain()
     {
-        NavigationManager.NavigateTo($"/");
+        NavigationManager.NavigateTo($"");
     }
 }
