Improved HTML UI and rewrite random nuber generator

--- a/MatchingGame/Pages/PlayGame.razor
+++ b/MatchingGame/Pages/PlayGame.razor
@@ -30,7 +30,7 @@
                         break;
 
                     case CardState.OpenGreen:
-                        <button class="btn card card-green" @onclick="() => OnClickCard1(card)">@card.Point</button>
+                        <div class="btn card card-green">@card.Point</div>
                         break;
 
                     case CardState.OpenRed:
@@ -63,7 +63,7 @@
                         break;
 
                     case CardState.OpenGreen:
-                        <button class="btn card card-green" @onclick="() => OnClickCard2(card)">@card.Point</button>
+                        <div class="btn card card-green">@card.Point</div>
                         break;
 
                     case CardState.OpenRed:
