--- a/MatchingGame/wwwroot/css/Card.css
+++ b/MatchingGame/wwwroot/css/Card.css
@@ -7,8 +7,8 @@
 
     to {
         transform: rotateY(0deg);
-        color: white;
-        background-color: green;
+        color: green;
+        background-color: white;
     }
 }
 
@@ -24,7 +24,7 @@
 
 @keyframes spin-to-hidden {
     from {
-        background-color: green;
+        background-color: white;
     }
 
     to {
@@ -34,17 +34,18 @@
 }
 
 .card {
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 100px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
     outline: none !important;
-    border: 0px solid;
+    border-radius: 8px;
 }
 
     .card:focus, .card:active {
@@ -53,19 +54,23 @@
     }
 
 .card-closed {
-    background-color: white;
+    border: 4px solid white;
+    border-radius: 8px;
+    background-color: #458ca9;
 }
 
 .card-green {
-    color: white;
-    background-color: green;
+    color: green;
+    background-color: white;
     animation: spin-to-green 0.5s linear;
+    border: 0px solid;
 }
 
 .card-red {
-    color: white;
-    background-color: red;
+    color: red;
+    background-color: white;
     animation: spin-to-red 0.5s linear;
+    border: 0px solid;
 }
 
 .card-hidden {
