--- a/MatchingGame/wwwroot/css/Card.css
+++ b/MatchingGame/wwwroot/css/Card.css
@@ -48,23 +48,15 @@
     border-radius: 8px;
 }
 
-.cardBtn {
-    width: 72px;
-    height: 92px;
-    background-color: #458ca9;
-    border: 0px solid;
-    border-radius: 6px;
-    outline: none !important;
-}
-
 .card:focus, .card:active {
     outline: none !important;
     border: 0px solid;
 }
 
 .card-closed {
-    border: 0px solid;
-    background-color: white;
+    border: 4px solid white;
+    background-color: #458ca9;
+    cursor: pointer;
 }
 
 .card-green {
