--- a/MatchingGame/Pages/PlayGame.razor
+++ b/MatchingGame/Pages/PlayGame.razor
@@ -6,8 +6,6 @@
 
 @implements IDisposable
 
-<link href="css/Card.css" rel="stylesheet" />
-
 <div class="container">
 
     <div class="d-flex justify-content-around">
@@ -25,24 +23,7 @@
         <div class="d-flex flex-wrap card-set">
             @foreach (var card in game.CardSet1)
             {
-                @switch (card.State)
-                {
-                    case CardState.Closed:
-                        <div class="card card-closed" @onclick="() => OnClickCard1(card)"></div>
-                        break;
-
-                    case CardState.OpenGreen:
-                        <div class="card card-green">@card.Point</div>
-                        break;
-
-                    case CardState.OpenRed:
-                        <div class="card card-red">@card.Point</div>
-                        break;
-
-                    case CardState.Hidden:
-                        <div class="card card-hidden"></div>
-                        break;
-                }
+                <CardView @key="card" card="card" OnClickCallback="OnClickCard1" />
             }
         </div>
     }
@@ -58,27 +39,11 @@
         <div class="d-flex flex-wrap card-set">
             @foreach (var card in game.CardSet2)
             {
-                @switch (card.State)
-                {
-                    case CardState.Closed:
-                        <div class="card card-closed" @onclick="() => OnClickCard2(card)"></div>
-                        break;
-
-                    case CardState.OpenGreen:
-                        <div class="card card-green">@card.Point</div>
-                        break;
-
-                    case CardState.OpenRed:
-                        <div class="card card-red">@card.Point</div>
-                        break;
-
-                    case CardState.Hidden:
-                        <div class="card card-hidden"></div>
-                        break;
-                }
+                <CardView @key="card" card="card" OnClickCallback="OnClickCard2" />
             }
         </div>
     }
+
 </div>
 
 @code {
